--- a/project/src/assets/css/Iconfont.css
+++ b/project/src/assets/css/Iconfont.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'iconfont';  /* project id 1106933 */
-  src: url('//at.alicdn.com/t/font_1106933_p3erd3hxjki.eot');
-  src: url('//at.alicdn.com/t/font_1106933_p3erd3hxjki.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1106933_p3erd3hxjki.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1106933_p3erd3hxjki.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1106933_p3erd3hxjki.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1106933_p3erd3hxjki.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.eot');
+  src: url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.svg#iconfont') format('svg');
 }
-.jiantou{
+.jiantouL{
   font-family:"iconfont" !important;
   font-size:16px;font-style:normal;
   -webkit-font-smoothing: antialiased;
@@ -28,7 +28,14 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-.enter{
+.jiantouR{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.dingdan{
   font-family:"iconfont" !important;
   font-size:16px;font-style:normal;
   -webkit-font-smoothing: antialiased;
