--- a/project/src/assets/css/Iconfont.css
+++ b/project/src/assets/css/Iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'iconfont';  /* project id 1106933 */
-  src: url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.eot');
-  src: url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1106933_87ol79pzfu9.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1106933_lmcg3qxspmr.eot');
+  src: url('//at.alicdn.com/t/font_1106933_lmcg3qxspmr.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1106933_lmcg3qxspmr.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1106933_lmcg3qxspmr.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1106933_lmcg3qxspmr.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1106933_lmcg3qxspmr.svg#iconfont') format('svg');
 }
 .jiantouL{
   font-family:"iconfont" !important;
@@ -36,6 +36,27 @@
   -moz-osx-font-smoothing: grayscale;
 }
 .dingdan{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.elm{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.znz{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.mine{
   font-family:"iconfont" !important;
   font-size:16px;font-style:normal;
   -webkit-font-smoothing: antialiased;
