--- a/project/src/assets/css/Iconfont.css
+++ b/project/src/assets/css/Iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'iconfont';  /* project id 1106933 */
-  src: url('//at.alicdn.com/t/font_1106933_dh0lsa1965.eot');
-  src: url('//at.alicdn.com/t/font_1106933_dh0lsa1965.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1106933_dh0lsa1965.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1106933_dh0lsa1965.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1106933_dh0lsa1965.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1106933_dh0lsa1965.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1106933_jbcpwvp437a.eot');
+  src: url('//at.alicdn.com/t/font_1106933_jbcpwvp437a.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1106933_jbcpwvp437a.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1106933_jbcpwvp437a.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1106933_jbcpwvp437a.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1106933_jbcpwvp437a.svg#iconfont') format('svg');
 }
 .jiantouL{
   font-family:"iconfont" !important;
@@ -98,4 +98,17 @@
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
-
+.wenhao{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
+.fdj{
+  font-family:"iconfont" !important;
+  font-size:16px;font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-stroke-width: 0.2px;
+  -moz-osx-font-smoothing: grayscale;
+}
