--- a/project/src/assets/css/Iconfont.css
+++ b/project/src/assets/css/Iconfont.css
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'iconfont';  /* project id 1106933 */
-  src: url('//at.alicdn.com/t/font_1106933_hhh0nuset0c.eot');
-  src: url('//at.alicdn.com/t/font_1106933_hhh0nuset0c.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1106933_hhh0nuset0c.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1106933_hhh0nuset0c.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1106933_hhh0nuset0c.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1106933_hhh0nuset0c.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_1106933_8mlv2f2x694.eot');
+  src: url('//at.alicdn.com/t/font_1106933_8mlv2f2x694.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_1106933_8mlv2f2x694.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_1106933_8mlv2f2x694.woff') format('woff'),
+  url('//at.alicdn.com/t/font_1106933_8mlv2f2x694.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_1106933_8mlv2f2x694.svg#iconfont') format('svg');
 }
-.jiantouL,.touxiang,.phone,.jiantouR,.dingdan,.elm,.znz,.mine,.jifen,.vip,.fuwu,.kefu1,.kefu2,.wenhao,.fdj,.jiaoyi,.gth,.duigou,.iphone{
+.jiantouL,.touxiang,.phone,.jiantouR,.dingdan,.elm,.znz,.mine,.jifen,.vip,.fuwu,.kefu1,.kefu2,.wenhao,.fdj,.jiaoyi,.gth,.duigou,.iphone,.cuohao{
   font-family:"iconfont" !important;
   font-size:16px;font-style:normal;
   -webkit-font-smoothing: antialiased;
